<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colour"
    android:padding="@dimen/_10sdp"
    tools:context=".activities.Loginpage">

    <TextView
    android:id="@+id/loginlogo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_25sdp"
    android:drawablePadding="@dimen/_5sdp"
    android:fontFamily="@font/work_sans"
    android:text="@string/app_name"
    android:textColor="@color/black"
    android:textSize="@dimen/_45ssp"
    android:textStyle="bold"
    app:drawableLeftCompat="@drawable/queue_image"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="For Patients"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginlogo"
        tools:ignore="HardcodedText"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernamelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:endIconMode="clear_text"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:errorEnabled="true"
        app:errorTextColor="#A60F0F"
        app:boxCornerRadiusTopStart="@dimen/_12sdp"
        app:boxCornerRadiusBottomStart="@dimen/_12sdp"
        app:boxCornerRadiusTopEnd="@dimen/_12sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/useraccount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Username"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usernamelayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:endIconMode="password_toggle"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:errorEnabled="true"
        app:errorTextColor="#A60F0F"
        app:boxCornerRadiusTopStart="@dimen/_12sdp"
        app:boxCornerRadiusBottomStart="@dimen/_12sdp"
        app:boxCornerRadiusTopEnd="@dimen/_12sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/passwordlock"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordlayout"
        android:layout_marginRight="@dimen/_12sdp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:text="Forgot password?"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cornerRadius="@dimen/_25sdp"
        android:textAllCaps="false"
        app:backgroundTint="#673AB7"
        android:text="Login"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:textSize="@dimen/_18ssp"
        android:text="Create New Account"
        android:backgroundTint="#673AB7"
        app:cornerRadius="@dimen/_25sdp"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>